refinements and translations

--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -169,6 +169,7 @@
   "console_opened": "Konsole geöffnet. Protokollierung gestartet...",
   "contact_account_link": "Der Kontakt ist mit dem Konto __account_id__ verknüpft.",
   "contact_name": "Kontaktname",
+  "contacting_node": "Knoten wird kontaktiert ...",
   "contacts": "Kontakte",
   "contacts_local_storage_help": "Denken Sie daran: Kontakte werden lokal gespeichert, nicht in der Blockchain.",
   "contacts_no_db_warning": "Ihr Browser unterstützt keinen Datenbank-Zugriff, ohne den die Kontakte nicht erstellt werden können.",
@@ -628,6 +629,9 @@
   "no_transactions_found": "Keine Transaktionen gefunden",
   "no_transactions_in_block": "Keine Transaktionen in diesem Block.",
   "no_transactions_yet": "Noch keine Transaktionen.",
+  "node_hint_no_multiout": "Keine Multiout-Zahlungen unterstützt",
+  "node_not_set": "Node konnte nicht geändert werden. Höchstwahrscheinlich ist er nicht erreichbar.",
+  "node_set_success": "Node wurde erfolgreich geändert",
   "non_verified_source": "Unbekannte, möglicherweise unsichere Quelle",
   "nonce": "Nonce",
   "none": "Keine",
@@ -781,7 +785,7 @@
   "seeded": "Seeded",
   "select_color_scheme": "Farbschema auswählen",
   "select_contact_in_sidebar": "Bitte wählen Sie einen Kontakt in der linken Seitenleiste.",
-  "select_node": "Select Node",
+  "select_node": "Knoten auswählen",
   "sell": "Verkaufen",
   "sell_alias": "Alias verkaufen",
   "sell_asset_for_burst": "__assetName__ für BURST verkaufen",
@@ -934,6 +938,7 @@
   "unknown": "unbekannt",
   "unknown_recipients": "Unknown Recipients Detected",
   "unknown_recipients_text": "The following recipient(s) could not be validated:",
+  "unknown_version": "Version unbekannt",
   "unsigned_transaction_bytes": "Nicht signierte Transaktionsbytes",
   "up_to_date_peers": "Aktuelle Peers",
   "update": "Aktualisierung",
@@ -960,6 +965,7 @@
   "valid_thru": "Gültig bis",
   "validate": "Validieren",
   "validate_token": "Token validieren",
+  "validating_node": "Validierung ...",
   "value_in_burst": "Wert in BURST",
   "verified_source": "Verifizierte und sichere Quelle",
   "verify": "Überprüfen",
