--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -169,6 +169,7 @@
   "console_opened": "Η κονσόλα άνοιξε. Ξεκίνηστε την εγγραφή...",
   "contact_account_link": "The contact links to account __account_id__.",
   "contact_name": "Όνομα επαφής",
+  "contacting_node": "Επικοινωνία με τον κόμβο ...",
   "contacts": "Επαφές",
   "contacts_local_storage_help": "Οι επαφές αποθηκεύονται τοπικά, και όχι στη blockchain.",
   "contacts_no_db_warning": "O broswer σας δεν υποστηρίζει τη πρόσβαση σε βάσεις δεδομένων, χωρίς την οποία δεν μπορούν να δημιουργηθούν επαφές.",
@@ -628,6 +629,9 @@
   "no_transactions_found": "No transactions found",
   "no_transactions_in_block": "No transactions in this block.",
   "no_transactions_yet": "Δεν υπάρχουν συναλλαγές ακόμα.",
+  "node_hint_no_multiout": "Δεν υποστηρίζονται πολλαπλές πληρωμές",
+  "node_not_set": "Δεν ήταν δυνατή η αλλαγή κόμβου. Πιθανότατα δεν είναι εφικτό.",
+  "node_set_success": "Ο κόμβος άλλαξε επιτυχώς",
   "non_verified_source": "Άγνωστη, δυνητικά ανασφαλής πηγή",
   "nonce": "Μην",
   "none": "Τίποτα",
@@ -781,7 +785,7 @@
   "seeded": "τοποθέτηση",
   "select_color_scheme": "Επιλέξτε χρώμα σχεδίου",
   "select_contact_in_sidebar": "Please select a contact in the left sidebar.",
-  "select_node": "Select Node",
+  "select_node": "Επιλέξτε Κόμβο",
   "sell": "Πωληση",
   "sell_alias": "Πώληση ψευδώνυμου",
   "sell_asset_for_burst": "Πώληση__assetName__ έναντι burst",
@@ -934,6 +938,7 @@
   "unknown": "Άγνωστο",
   "unknown_recipients": "Unknown Recipients Detected",
   "unknown_recipients_text": "The following recipient(s) could not be validated:",
+  "unknown_version": "Έκδοση άγνωστη",
   "unsigned_transaction_bytes": "Ανυπόγραφα Bytes συναλλαγής",
   "up_to_date_peers": "Ενημερωμένοi κόμβοι",
   "update": "Ενημέρωση",
@@ -960,6 +965,7 @@
   "valid_thru": "Εγκυρο μέχρι",
   "validate": "Επιβεβαίωση",
   "validate_token": "Validate Token",
+  "validating_node": "Επικύρωση ...",
   "value_in_burst": "Τιμή σε burst",
   "verified_source": "Επαληθευμένη και ασφαλής πηγή",
   "verify": "Επαληθεύω",
