--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -169,6 +169,7 @@
   "console_opened": "Console aperta. Inizio tracciamento...",
   "contact_account_link": "I link di contatto a __account_id__.",
   "contact_name": "Nome contatto",
+  "contacting_node": "Contattare il nodo ...",
   "contacts": "Contatti",
   "contacts_local_storage_help": "Ricorda: i contatti sono salvati in locale, non sul blockchain.",
   "contacts_no_db_warning": "Il tuo browser non supporta l'accesso al database, senza il quale non è possibile creare contatti.",
@@ -628,6 +629,9 @@
   "no_transactions_found": "Nessuna transazione trovata",
   "no_transactions_in_block": "Nessuna transazione in questo blocco.",
   "no_transactions_yet": "Ancora nessuna transazione.",
+  "node_hint_no_multiout": "Non sono supportati pagamenti multipli",
+  "node_not_set": "Impossibile cambiare nodo. Il più probabile non è raggiungibile.",
+  "node_set_success": "Nodo cambiato con successo",
   "non_verified_source": "Fonte sconosciuta, potenzialmente insicura",
   "nonce": "nonce",
   "none": "None",
@@ -781,7 +785,7 @@
   "seeded": "Seminato",
   "select_color_scheme": "Selezionare la combinazione di colori",
   "select_contact_in_sidebar": "Si prega di selezionare un contatto dalla barra laterale di sinistra.",
-  "select_node": "Select Node",
+  "select_node": "Scegli Nodo",
   "sell": "Venda",
   "sell_alias": "Vendi Alias",
   "sell_asset_for_burst": "Vendi __assetName__ per BURST",
@@ -934,6 +938,7 @@
   "unknown": "Sconosciuto",
   "unknown_recipients": "Unknown Recipients Detected",
   "unknown_recipients_text": "The following recipient(s) could not be validated:",
+  "unknown_version": "Versione sconosciuta",
   "unsigned_transaction_bytes": "Byte di transazione senza firma",
   "up_to_date_peers": "Peer aggiornati",
   "update": "Aggiornamento",
@@ -960,6 +965,7 @@
   "valid_thru": "Valido attraverso",
   "validate": "Valida",
   "validate_token": "Convalida Token",
+  "validating_node": "Convalida ...",
   "value_in_burst": "Valore in BURST",
   "verified_source": "Fonte verificata e sicura",
   "verify": "Verificare",
