--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -169,6 +169,7 @@
   "console_opened": "コンソールを開きました。ログインを開始しています。",
   "contact_account_link": "__Account_id__のアカウントにリンクした連絡先",
   "contact_name": "連絡先名",
+  "contacting_node": "連絡先ノード...",
   "contacts": "連絡先",
   "contacts_local_storage_help": "注意: 連絡先はブロックチェーンではなくローカルに格納されます。",
   "contacts_no_db_warning": "お使いのブラウザは、データベースへのアクセスをサポートしていません。それがなくては連絡先を作成ことはできません。",
@@ -628,6 +629,9 @@
   "no_transactions_found": "トランザクションが見つかりません",
   "no_transactions_in_block": "このブロックにはトランザクションがありません。",
   "no_transactions_yet": "トランザクションがまだありません。",
+  "node_hint_no_multiout": "マルチアウト支払いはサポートされていません",
+  "node_not_set": "ノードを変更できませんでした。最も可能性が高いのは到達不可能です。",
+  "node_set_success": "ノードは正常に変更されました",
   "non_verified_source": "未知の、潜在的に安全でない情報源",
   "nonce": "一回だけ",
   "none": "なし",
@@ -781,7 +785,7 @@
   "seeded": "シードされた",
   "select_color_scheme": "配色を選択",
   "select_contact_in_sidebar": "左のサイドバーで連絡先を選択してください。",
-  "select_node": "Select Node",
+  "select_node": "ノードを選択",
   "sell": "販売",
   "sell_alias": "エイリアスを販売",
   "sell_asset_for_burst": "__assetName__をBURSTで販売",
@@ -934,6 +938,7 @@
   "unknown": "不明",
   "unknown_recipients": "Unknown Recipients Detected",
   "unknown_recipients_text": "The following recipient(s) could not be validated:",
+  "unknown_version": "バージョン不明",
   "unsigned_transaction_bytes": "符号なしのトランザクションのバイト",
   "up_to_date_peers": "最新のピア",
   "update": "アップデート",
@@ -960,6 +965,7 @@
   "valid_thru": "Thru有効な",
   "validate": "検証",
   "validate_token": "トークンを検証",
+  "validating_node": "検証しています...",
   "value_in_burst": "BURST での価値",
   "verified_source": "検証済みの安全なソース",
   "verify": "確認する",
