--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -169,6 +169,7 @@
   "console_opened": "Console venster is geopend. Logging is gestart...",
   "contact_account_link": "De contact wijst naar rekening  __account_id__.",
   "contact_name": "Contactnaam",
+  "contacting_node": "Contact opnemen met knooppunt ...",
   "contacts": "Contactpersonen",
   "contacts_local_storage_help": "Onthoud!: Contactpersonen zijn alleen lokaal te vinden, deze worden niet op de blockchain opgeslagen.",
   "contacts_no_db_warning": "Uw browser ondersteunt de toegang tot de database niet, contacten kunnen niet gemaakt worden.",
@@ -628,6 +629,9 @@
   "no_transactions_found": "Geen transacties gevonden",
   "no_transactions_in_block": "Er zijn geen transacties in dit blok.",
   "no_transactions_yet": "Nog geen transacties.",
+  "node_hint_no_multiout": "Geen multiout-betalingen ondersteund",
+  "node_not_set": "Kan het knooppunt niet wijzigen. Hoogstwaarschijnlijk is het niet bereikbaar.",
+  "node_set_success": "Knooppunt met succes gewijzigd",
   "non_verified_source": "Onbekende, potentieel onveilige bron",
   "nonce": "nonce",
   "none": "Geen",
@@ -781,7 +785,7 @@
   "seeded": "Ge-seed",
   "select_color_scheme": "Selecteer kleurenschema",
   "select_contact_in_sidebar": "Selecteer A.u.b. een contactpersoon in de linker menubar.",
-  "select_node": "Select Node",
+  "select_node": "Kies knooppunt",
   "sell": "Verkoop",
   "sell_alias": "Verkoop Alias",
   "sell_asset_for_burst": "Verkoop __assetName__ voor BURST",
@@ -934,6 +938,7 @@
   "unknown": "Onbekend",
   "unknown_recipients": "Unknown Recipients Detected",
   "unknown_recipients_text": "The following recipient(s) could not be validated:",
+  "unknown_version": "Versie onbekend",
   "unsigned_transaction_bytes": "Niet-ondertekende Transactie Bytes",
   "up_to_date_peers": "Actuele peers",
   "update": "Update",
@@ -960,6 +965,7 @@
   "valid_thru": "Geldig door",
   "validate": "Valideer",
   "validate_token": "Token Valideren",
+  "validating_node": "Valideren ...",
   "value_in_burst": "Waarde in BURST",
   "verified_source": "Geverifieerde en beveiligde bron",
   "verify": "Verifiëren",
