--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -169,6 +169,7 @@
   "console_opened": "Consola s-a deschis. Logarea a început...",
   "contact_account_link": "Contactul aparține contului __account_id__.",
   "contact_name": "Nume Contact",
+  "contacting_node": "Contactarea nodului ...",
   "contacts": "Contacte",
   "contacts_local_storage_help": "Persoanele de contact sunt stocate local, nu pe blockchain.",
   "contacts_no_db_warning": "Browserul nu suportă accesul la baza de date, fără de care nu pot fi create contacte.",
@@ -628,6 +629,9 @@
   "no_transactions_found": "Nu s-au găsit tranzacții",
   "no_transactions_in_block": "Nu sunt tranzacţii în acest bloc.",
   "no_transactions_yet": "Încă nu sunt tranzacţii.",
+  "node_hint_no_multiout": "Nu sunt acceptate plăți multiple",
+  "node_not_set": "Nu s-a putut modifica nodul. Cel mai probabil nu este accesibil.",
+  "node_set_success": "Nodul sa schimbat cu succes",
   "non_verified_source": "Sursă necunoscută, potențial nesigură",
   "nonce": "Nonce",
   "none": "Niciuna",
@@ -781,7 +785,7 @@
   "seeded": "Semănat(e)",
   "select_color_scheme": "Selectare schemă culori",
   "select_contact_in_sidebar": "Te rugăm să selectezi o persoană de contact în bara laterală stânga.",
-  "select_node": "Select Node",
+  "select_node": "Alegeți Nodul",
   "sell": "Vânzare",
   "sell_alias": "Vinde Alias",
   "sell_asset_for_burst": "Vinde __assetName__ pentru burst",
@@ -934,6 +938,7 @@
   "unknown": "Necunoscut(ă)",
   "unknown_recipients": "Unknown Recipients Detected",
   "unknown_recipients_text": "The following recipient(s) could not be validated:",
+  "unknown_version": "Versiunea necunoscută",
   "unsigned_transaction_bytes": "Bytes-ii Tranzacției Nesemnalate",
   "up_to_date_peers": "Peers de actualizat",
   "update": "Actualizare",
@@ -960,6 +965,7 @@
   "valid_thru": "Valabil prin",
   "validate": "Validare",
   "validate_token": "Validează Token",
+  "validating_node": "Validare ...",
   "value_in_burst": "Valoarea în burst",
   "verified_source": "Sursă verificată și sigură",
   "verify": "Verifica",
