--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -169,6 +169,7 @@
   "console_opened": "Konsol açık. Giriş  başlıyor...",
   "contact_account_link": "The contact links to account __account_id__.",
   "contact_name": "Kişi adı",
+  "contacting_node": "Düğüm kuruluyor ...",
   "contacts": "Rehber",
   "contacts_local_storage_help": "Remember: Contacts are stored locally, not on the blockchain.",
   "contacts_no_db_warning": "Your browser does not support database access, without which contacts cannot be created.",
@@ -628,6 +629,9 @@
   "no_transactions_found": "No transactions found",
   "no_transactions_in_block": "No transactions in this block.",
   "no_transactions_yet": "No transactions yet.",
+  "node_hint_no_multiout": "Multiout ödemesi desteklenmiyor",
+  "node_not_set": "Düğüm değiştirilemedi. En muhtemel olan ulaşılamaz değil.",
+  "node_set_success": "Düğüm başarıyla değiştirildi",
   "non_verified_source": "Bilinmeyen, potansiyel olarak güvensiz kaynak",
   "nonce": "şimdiki zaman",
   "none": "None",
@@ -781,7 +785,7 @@
   "seeded": "Seeded",
   "select_color_scheme": "Select Color Scheme",
   "select_contact_in_sidebar": "Please select a contact in the left sidebar.",
-  "select_node": "Select Node",
+  "select_node": "Düğüm Seç",
   "sell": "Sell",
   "sell_alias": "Sell Alias",
   "sell_asset_for_burst": "burst için __assetName__ Satış",
@@ -934,6 +938,7 @@
   "unknown": "Bilinmeyen",
   "unknown_recipients": "Unknown Recipients Detected",
   "unknown_recipients_text": "The following recipient(s) could not be validated:",
+  "unknown_version": "Sürüm bilinmiyor",
   "unsigned_transaction_bytes": "İmzalanmamış işlem bayt",
   "up_to_date_peers": "Güncel eş",
   "update": "Güncelleme",
@@ -960,6 +965,7 @@
   "valid_thru": "Geçmişten geçerli",
   "validate": "Validate",
   "validate_token": "Validate Token",
+  "validating_node": "Doğrulanıyor ...",
   "value_in_burst": "Value in BURST",
   "verified_source": "Doğrulanmış ve güvenli kaynak",
   "verify": "DOĞRULAYIN",
