--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -169,6 +169,7 @@
   "console_opened": "Konzole spuštěna. Protokolování začalo...",
   "contact_account_link": "Kontakt odkazuje na účet __account_id__.",
   "contact_name": "Jméno kontaktu",
+  "contacting_node": "Kontaktování uzlu ...",
   "contacts": "Kontakty",
   "contacts_local_storage_help": "Kontakty jsou uloženy lokálně, ne na blockchainu.",
   "contacts_no_db_warning": "Váš prohlížeč nepodporuje přístup k databázi, bez něhož nelze vytvořit kontakty.",
@@ -628,6 +629,9 @@
   "no_transactions_found": "Nebyly nalezeny žádné transakce",
   "no_transactions_in_block": "Žádné transakce v tomto bloku.",
   "no_transactions_yet": "Doposud žádné transakce.",
+  "node_hint_no_multiout": "Žádné multiout platby podporovány",
+  "node_not_set": "Nelze změnit uzel. Nejpravděpodobnější není.",
+  "node_set_success": "Uzel byl úspěšně změněn",
   "non_verified_source": "Neznámý, potenciálně nezabezpečený zdroj",
   "nonce": "Nonce",
   "none": "Žádný",
@@ -781,7 +785,7 @@
   "seeded": "Vygenerováno",
   "select_color_scheme": "Vyberte barevné schéma",
   "select_contact_in_sidebar": "Vyberte prosím kontakt z lišty vlevo.",
-  "select_node": "Select Node",
+  "select_node": "Zvolte Uzel",
   "sell": "Prodat",
   "sell_alias": "Prodat alias",
   "sell_asset_for_burst": "Prodat __assetName__ za burst",
@@ -934,6 +938,7 @@
   "unknown": "Neznámý",
   "unknown_recipients": "Unknown Recipients Detected",
   "unknown_recipients_text": "The following recipient(s) could not be validated:",
+  "unknown_version": "Verze neznámá",
   "unsigned_transaction_bytes": "Unsigned Transaction Bytes",
   "up_to_date_peers": "Aktuální peeři",
   "update": "Aktualizovat",
@@ -960,6 +965,7 @@
   "valid_thru": "Platné přes",
   "validate": "Validate",
   "validate_token": "Ověřit Token",
+  "validating_node": "Ověřování ...",
   "value_in_burst": "Hodnota v burst",
   "verified_source": "Ověřený a bezpečný zdroj",
   "verify": "Ověřte",
