Mobile/login changes (#597)
* chore(package.json): revert corejs upgrade

* feat(login): make login persistent, use login PIN for new accounts, add settings page

* feat(mobile): fix linting

* feat(home): use proper lifecycle method

--- a/mobile/src/translations/en.json
+++ b/mobile/src/translations/en.json
@@ -106,5 +106,14 @@
         "title": "Send"
       }
     }
+  },
+  "settings": {
+    "screens": {
+      "settings": {
+        "title": "Settings",
+        "erase": "Erase all accounts and reset PIN",
+        "confirmErase": "Confirm - Erase and Reset"
+      }
+    }
   }
 }
