--- a/mobile/src/translations/ru.json
+++ b/mobile/src/translations/ru.json
@@ -105,5 +105,14 @@
         "title": "Отправить"
       }
     }
+  },
+  "settings": {
+    "screens": {
+      "settings": {
+        "title": "Settings",
+        "erase": "Erase all accounts and reset PIN",
+        "confirmErase": "Confirm - Erase and Reset"
+      }
+    }
   }
 }
