--- a/mobile/src/translations/ru.json
+++ b/mobile/src/translations/ru.json
@@ -29,6 +29,11 @@
         },
         "title": "Аккаунты"
       },
+      "accountDetails": {
+        "noTransactions": {
+          "title": "Нет транзакций"
+        }
+      },
       "addAccount": {
         "addAccount": "Добавить аккаунт",
         "createAccount": "Создать аккаунт",
@@ -75,6 +80,24 @@
       "BURST": {
         "name": "BURST",
         "value": "{{value}} BURST"
+      }
+    },
+    "dates": {
+      "months": {
+        "short": {
+          "0": "Янв",
+          "1": "Фев",
+          "2": "Мар",
+          "3": "Апр",
+          "4": "Мая",
+          "5": "Июн",
+          "6": "Июл",
+          "7": "Авг",
+          "8": "Сен",
+          "9": "Окт",
+          "10": "Ноя",
+          "11": "Дек"
+        }
       }
     },
     "layout": {
