--- a/mobile/src/translations/ru.json
+++ b/mobile/src/translations/ru.json
@@ -85,18 +85,18 @@
     "dates": {
       "months": {
         "short": {
-          "0": "Янв",
-          "1": "Фев",
-          "2": "Мар",
-          "3": "Апр",
-          "4": "Мая",
-          "5": "Июн",
-          "6": "Июл",
-          "7": "Авг",
-          "8": "Сен",
-          "9": "Окт",
-          "10": "Ноя",
-          "11": "Дек"
+          "JAN": "Янв",
+          "FEB": "Фев",
+          "MAR": "Мар",
+          "APR": "Апр",
+          "MAY": "Мая",
+          "JUN": "Июн",
+          "JUL": "Июл",
+          "AUG": "Авг",
+          "SEP": "Сен",
+          "OCT": "Окт",
+          "NOV": "Ноя",
+          "DEC": "Дек"
         }
       }
     },
