--- a/mobile/src/translations/en.json
+++ b/mobile/src/translations/en.json
@@ -86,18 +86,18 @@
     "dates": {
       "months": {
         "short": {
-          "0": "Jan",
-          "1": "Feb",
-          "2": "Mar",
-          "3": "Apr",
-          "4": "May",
-          "5": "Jun",
-          "6": "Jul",
-          "7": "Aug",
-          "8": "Sep",
-          "9": "Oct",
-          "10": "Nov",
-          "11": "Dec"
+          "JAN": "Jan",
+          "FEB": "Feb",
+          "MAR": "Mar",
+          "APR": "Apr",
+          "MAY": "May",
+          "JUN": "Jun",
+          "JUL": "Jul",
+          "AUG": "Aug",
+          "SEP": "Sep",
+          "OCT": "Oct",
+          "NOV": "Nov",
+          "DEC": "Dec"
         }
       }
     },
