--- a/mobile/src/translations/en.json
+++ b/mobile/src/translations/en.json
@@ -29,6 +29,11 @@
         },
         "title": "Accounts"
       },
+      "accountDetails": {
+        "noTransactions": {
+          "title": "No transactions"
+        }
+      },
       "addAccount": {
         "createAccount": "Create account",
         "hint": "Do you have an account?",
@@ -76,6 +81,24 @@
       "BURST": {
         "name": "BURST",
         "value": "{{value}} BURST"
+      }
+    },
+    "dates": {
+      "months": {
+        "short": {
+          "JAN": "Jan",
+          "FEB": "Feb",
+          "MAR": "Mar",
+          "APR": "Apr",
+          "MAY": "May",
+          "JUN": "Jun",
+          "JUL": "Jul",
+          "AUG": "Aug",
+          "SEP": "Sep",
+          "OCT": "Oct",
+          "NOV": "Nov",
+          "DEC": "Dec"
+        }
       }
     },
     "layout": {
