--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -629,6 +629,7 @@
   "no_transactions_found": "Транзакції не знайдені",
   "no_transactions_in_block": "У цьому блоці немає транзакцій.",
   "no_transactions_yet": "Ще немає транзакцій.",
+  "node_endpoint": "Кінцева точка вузла",
   "node_hint_no_multiout": "Не підтримується багаторазові платежі",
   "node_not_set": "Не вдалося змінити вузол. Найбільш ймовірно, що це недосяжно.",
   "node_set_success": "Вузол успішно змінено",
