--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -629,6 +629,7 @@
   "no_transactions_found": "No s'ha trobat cap transacció",
   "no_transactions_in_block": "Cap transacció en aquest bloc.",
   "no_transactions_yet": "Encara no hi ha cap transacció.",
+  "node_endpoint": "Endpoint del node",
   "node_hint_no_multiout": "No s’admeten pagaments múltiples",
   "node_not_set": "No s'ha pogut canviar el node. El més probable és que no sigui accessible.",
   "node_set_success": "El node ha canviat correctament",
