--- a/web/angular-wallet/src/locales/sh.json
+++ b/web/angular-wallet/src/locales/sh.json
@@ -629,6 +629,7 @@
   "no_transactions_found": "Transakcija nije pronađena",
   "no_transactions_in_block": "Nema transakcija u ovom bloku.",
   "no_transactions_yet": "Još uvijek bez transakcija.",
+  "node_endpoint": "",
   "node_hint_no_multiout": "Ne podržavaju se multiout plaćanja",
   "node_not_set": "Nije moguće promijeniti čvor. Najvjerovatnije nije dostupno.",
   "node_set_success": "Čvor je uspješno promijenjen",
