--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -629,6 +629,7 @@
   "no_transactions_found": "No transactions found",
   "no_transactions_in_block": "No transactions in this block.",
   "no_transactions_yet": "No transactions yet.",
+  "node_endpoint": "Düğüm Bitiş Noktası",
   "node_hint_no_multiout": "Multiout ödemesi desteklenmiyor",
   "node_not_set": "Düğüm değiştirilemedi. En muhtemel olan ulaşılamaz değil.",
   "node_set_success": "Düğüm başarıyla değiştirildi",
