WIP Send screen. Added Select component, recreated Input component

--- a/mobile/src/translations/en.json
+++ b/mobile/src/translations/en.json
@@ -136,8 +136,12 @@
       "send": {
         "amountNQT": "Amount",
         "feeNQT": "Fee",
+        "from": "From",
+        "selectAccount": "Select an account",
         "sent": "Sent!",
-        "title": "Send"
+        "title": "Send",
+        "to": "To",
+        "total": "Total: {{value}} BURST"
       }
     }
   },
