--- a/mobile/src/translations/ru.json
+++ b/mobile/src/translations/ru.json
@@ -135,8 +135,12 @@
       "send": {
         "amountNQT": "Количество",
         "feeNQT": "Комиссия",
+        "from": "Аккаунт отправителя",
+        "selectAccount": "Выберите аккаунт",
         "sent": "Отправлено!",
-        "title": "Отправить"
+        "title": "Отправить",
+        "to": "Аккаунт получателя",
+        "total": "Всего: {{value}} BURST"
       }
     }
   },
